Ingresamos contenido html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>ejemplo de control de versiones</h1>
 
+    <div class="font-git">
+        git init
+    </div>
+    <p> Inicie el repositorio</p>
+    <div></div>
+
 </body>
 
 </html>
