Se agregó estilo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 
 <body>
-    <h1>ejemplo de control de versiones</h1>
+    <div class="container">
+        <h1>ejemplo de control de versiones</h1>
 
-    <div class="font-git">
-        git init
+        <div class="font-git">
+            git init
+        </div>
+        <p> Inicie el repositorio</p>
+        <div class="font-git">
+            git commit -m "mensaje"
+        </div>
     </div>
-    <p> Inicie el repositorio</p>
-    <div></div>
 
 </body>
 
